@@ -748,40 +748,40 @@ output.elasticsearch:
 # These settings control loading the sample dashboards to the Kibana index. Loading
 # the dashboards is disabled by default and can be enabled either by setting the
 # options here, or by using the `-setup` CLI flag.
-#dashboards.enabled: false
+#setup.dashboards.enabled: false
 
 # The URL from where to download the dashboards archive. By default this URL
 # has a value which is computed based on the Beat name and version. For released
 # versions, this URL points to the dashboard archive on the artifacts.elastic.co
 # website.
-#dashboards.url:
+#setup.dashboards.url:
 
 # The directory from where to read the dashboards. It is used instead of the URL
 # when it has a value.
-#dashboards.directory:
+#setup.dashboards.directory:
 
 # The file archive (zip file) from where to read the dashboards. It is used instead
 # of the URL when it has a value.
-#dashboards.file:
+#setup.dashboards.file:
 
 # If this option is enabled, the snapshot URL is used instead of the default URL.
-#dashboards.snapshot: false
+#setup.dashboards.snapshot: false
 
 # The URL from where to download the snapshot version of the dashboards. By default
 # this has a value which is computed based on the Beat name and version.
-#dashboards.snapshot_url
+#setup.dashboards.snapshot_url
 
 # In case the archive contains the dashboards from multiple Beats, this lets you
 # select which one to load. You can load all the dashboards in the archive by
 # setting this to the empty string.
-#dashboards.beat: heartbeat
+#setup.dashboards.beat: heartbeat
 
 # The name of the Kibana index to use for setting the configuration. Default is ".kibana"
-#dashboards.kibana_index: .kibana
+#setup.dashboards.kibana_index: .kibana
 
 # The Elasticsearch index name. This overwrites the index name defined in the
 # dashboards and index pattern. Example: testbeat-*
-#dashboards.index:
+#setup.dashboards.index:
 
 #================================ HTTP Endpoint ======================================
 # Each beat can expose internal data points through a http endpoint. For security
